addding react native notifications in npm

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.2",
+		"react-native-push-notification": "^3.0.1",
 		"react-navigation": "^1.0.0-beta.13"
 	},
 	"devDependencies": {
