--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"color-convert": "^1.9.0",
+		"has-flag": "^2.0.0",
+		"process-nextick-args": "^1.0.7",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.2",
 		"react-native-push-notification": "^3.0.1",
